--- a/src/components/login/index.css
+++ b/src/components/login/index.css
@@ -85,7 +85,7 @@ body {
     margin-bottom: 0;
 }
 
-.form__input {
+.form__field .form__input {
     position: absolute;
     top: 0;
     left: 0;
