--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -49,7 +49,7 @@ img {
 }
 
 h1 {
-    font-size: 2.5rem;
+    font-size: 2.5rem !important;
     font-weight: 900;
 }
 
@@ -58,7 +58,7 @@ h2 {
 }
 
 h3 {
-    font-size: 1rem;
+    font-size: 1rem !important;
 }
 
 h4 {
@@ -104,7 +104,7 @@ p {
     cursor: pointer;
 }
 
-.container {
+.container__bootstrap-no {
     display: -ms-grid;
     display: grid;
     width: 96%;
@@ -172,7 +172,7 @@ aside .sidebar {
     flex-direction: column;
     height: 74vh;
     position: relative;
-    top: 3rem;
+    top: 2rem;
 }
 
 aside h3 {
@@ -215,6 +215,10 @@ aside .sidebar a.active::before {
 
 aside .sidebar a:hover span {
     margin-left: 1rem;
+}
+
+.info-sell span {
+    font-size: 0.9rem !important;
 }
 
 /* ==================== MAIN ============================ */
@@ -396,7 +400,7 @@ main .table__container {
 /* ==================== MEDIA QUERIES ============================ */
 
 @media screen and (max-width: 1200px) {
-    .container {
+    .container__bootstrap-no {
         width: 94%;
         grid-template-columns: 5rem auto;
         margin: 0;
@@ -446,7 +450,8 @@ main .table__container {
     }
 
     .table thead tr th {
-        font-weight: 200;
+        font-weight: 400;
+        text-align: center;
     }
 
     .modal__container form {
@@ -513,7 +518,7 @@ main .table__container {
 }
 
 @media screen and (max-width: 800px){
-    .container {
+    .container__bootstrap-no {
         width: 100%;
     }
 
