--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -81,6 +81,29 @@ p {
     background-color: var(--color-primary);
 }
 
+.btn-blue-dark {
+    background-color: var(--color-blue-dark) !important;
+    border: none !important;
+}
+
+.btn-blue-dark:hover {
+    border: 2px solid var(--color-blue-dark) !important;
+    background-color: transparent !important;
+    color: var(--color-blue-dark) !important;
+}
+
+.btn-blue-dark-outline {
+    border: 2px solid var(--color-blue-dark) !important;
+    background-color: transparent !important;
+    color: var(--color-blue-dark) !important;
+}
+
+.btn-blue-dark-outline:hover {
+    background-color: var(--color-blue-dark) !important;
+    border: none !important;
+    color: var(--color-light) !important;
+}
+
 .bg-light {
     background-color: var(--color-bg-white);
 }
