--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -24,7 +24,9 @@
     --margin-top: 2rem;
 }
 
-* {
+*,
+::before,
+::after{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -33,7 +35,7 @@
 body {
     font-family: "Lato", sans-serif;
     min-height: 100vh;
-    width: 100vw;
+    width: 100%;
     overflow-x: hidden;
 }
 
@@ -75,6 +77,11 @@ p {
 .open {
     display: none;
     cursor: pointer;
+}
+
+.form-check-input:checked{
+    background-color: var(--text-dark) !important;
+    border-color: var(--text-dark) !important;
 }
 
 .text-blue {
